--- a/games/CGgame/css/mystyle3.css
+++ b/games/CGgame/css/mystyle3.css
@@ -104,11 +104,16 @@
     margin: 11px 3px;
 }
 #ansInput p:first-child {
-    margin-left: 22px;
+    margin-left: 16px;
 }
-#ansInput input {
+/*#ansInput input {
     float: left;
     width: 24px;
+    margin: 2px 1px;
+}*/
+#ansInput select {
+    float: left;
+    width: 34px;
     margin: 2px 1px;
 }
 
